--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "1.0.0",
     "description": "Fetch GitHub trending repos and post to Rocket.Chat",
     "main": "scripts/fetch-trending.js",
-    "scripts": {
-      "start": "node scripts/fetch-trending.js"
-    },
+      "scripts": {
+    "start": "node scripts/fetch-trending.js",
+    "fetch:rich": "node scripts/fetch-trending.js",
+    "fetch:simple": "node scripts/fetch-trending.js --simple"
+  },
     "dependencies": {
       "axios": "^1.0.0",
       "cheerio": "^1.0.0-rc.12"
